fixed sidebar icon alignment

--- a/src/less/widgets.less
+++ b/src/less/widgets.less
@@ -42,6 +42,7 @@
 			}
 		}
 	}
+
 	.widget {
 		background: @white;
 		padding: 20px;
@@ -49,12 +50,16 @@
 			padding: 15px 20px !important;
 		}
 
-
-
-		.social {
+		.social-btns {
 			padding: 0;
 			display: flex;
 			justify-content: space-between;
+			margin: 0 !important;
+
+			i,
+			.fab {
+				margin: 0 !important;
+			}
 
 					@media (max-width: 1000px) {
 						a {
@@ -65,11 +70,11 @@
 							padding: 0 !important;
 							}
 
-					i {
+					i,
+					.fab {
 						font-size: 16px;
+						margin: 0 !important;
 					}
-
-
 				}
 			}
 
